======================
    FIXED: crash when "run in terminal mode" was active on a directory with
           insufficient permissions (thanks Oleksandr Shneyder)
    ADDED: column types can be changed and saved individually to each panel
    (each side)
    --architecture-- refactoring in the view. things might be a bit unstable
    --architecture-- removed a lot of KrViewItem's API
    ADDED: select remote encoding menu for fish, ftp and sftp protocols
    ADDED: clear-location-bar button a-la konqueror (configurable)
    ADDED: permissions column as octal numbers
    ADDED: right-click menu now has a "create new..." submenu
    --architecture-- right-click menu code moved to a new class KrPopupMenu
    ADDED: ctrl-alt-enter opens the current folder in a new tab
    ADDED: calculate space in archives and remote FS (KDE >= 3.3.0) 
    ADDED: experimental support for mimetype-on-demand 
    ADDED: experimental support for icon-on-demand 
    ADDED: when custom filter is set, the Totals line will show the filter.
           example: [*.cpp]
    ADDED: useraction: Drop a warning on JavaScript-errors
    ADDED: set krusaders icon acording to the users privileges
    ADDED: preserve date for local targets at copy / move
    ADDED: useraction: For JS-extensions the global variable scriptDir is
           available, indicating the location of the current script
    --architecture-- moved JavaScript-stuff into it's own module KrJS
    --architecture-- Makefile.am's for /krusader and /pics revised
    ADDED: Serbian translation (thanks Sasa Tomic)
    ADDED: Brazilian Portuguese translation (thanks Doutor Zero)
    ADDED: synchronize selected files
    ADDED: colorful synchronizer :-)
    ADDED: starting more tabs with --left=tab1,tab2,tab3 --right=tab4,tab5
    ADDED: vertical mode is saved with 'ui save settings' or 'save position'
           and restored
    ADDED: A Safari-like Jump-Back feature (Ctrl-J and in the bookmark-menu)