@@ -41,6 +41,7 @@ protected:
 		PROPERTIES_ID,
 		MOUNT_ID,
 		UNMOUNT_ID,
+		TRASH_ID,
 		SHRED_ID,
 		NEW_LINK_ID,
 		NEW_SYMLINK_ID,
