@@ -1,6 +1,5 @@
 ======================
-    FIXED: crash when "run in terminal mode" was active on a directory with
-           insufficient permissions (thanks Oleksandr Shneyder)
+    ADDED: right click menu -> trash, delete, shred options
     ADDED: column types can be changed and saved individually to each panel
     (each side)
     --architecture-- refactoring in the view. things might be a bit unstable
@@ -38,6 +37,8 @@
 
   CHANGED: the panel startup is profile based instead of directory based
 
+    FIXED: crash when "run in terminal mode" was active on a directory with
+           insufficient permissions (thanks Oleksandr Shneyder)
     FIXED: [ 1213137 ] javascript self.close() causes crash in the viewer
     FIXED: Control+Delete can be used in those distributions where Shift+Delete
            doesn't work
